# django-form-surveys

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  index.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
demo/: .gitignore  djf_surveys
demo/demo/: settings.py  urls.py
djf_surveys/: __init__.py  admin.py  app_settings.py  apps.py  context_processors.py  forms.py  models.py  summary.py  tests.py  urls.py  utils.py  validators.py  views.py  widgets.py
djf_surveys/admins/: urls.py  views.py
djf_surveys/migrations/: 0001_initial.py  0002_auto_20220330_1033.py  0003_auto_20220330_1036.py  0004_auto_20220330_1112.py  0005_auto_20220404_1518.py  0006_survey_private_response.py  0007_auto_20220525_1126.py  0008_auto_20220721_0935.py  0009_alter_answer_options_alter_question_options_and_more.py  0009_auto_20220803_0927.py  0010_model_translation.py  0011_alter_question_key.py  0012_survey_notification_to.py  0013_survey_success_page_content.py  0014_alter_survey_success_page_content.py  0015_termsvalidators.py  0016_alter_survey_description_and_more.py  0017_alter_survey_success_page_content.py  0018_survey_cycle_survey.py
djf_surveys/templatetags/: djf_survey_tags.py  survey_tags.py
docs/: getting_started.md  index.md
surveys/: admin.py  admin_views.py  app_settings.py  apps.py  context_processors.py  forms.py  mixin.py  models.py  urls.py  utils.py  views.py  views_mixin.py  widgets.py
surveys/admins/: views.py
surveys/migrations/: 0001_initial.py  0002_auto_20181212_1533.py  0002_question_ordering.py  0003_survey_slug.py  (+4 more)
(+82 files in other folders)
